# pg_parse

./: Cargo.toml  README.md  VERSION.md  build.rs
.github/workflows/: main.yml
src/: ast.rs  bindings.rs  error.rs  lib.rs  query.rs  serde.rs  str.rs
src/str/: ext.rs  helpers.rs  nodes.rs
tests/: fingerprint_tests.rs  normalize_tests.rs  parse_plpgsql_tests.rs  parse_tests.rs  str_tests.rs  version_numbers.rs
tests/data/sql/: func_1.sql  func_2.sql  table_1.sql  view_1.sql
tests/data/tree/: simple_plpgsql.json
